<resources>
    <string name="app_name">Messenger</string>
    <string name="register">Register</string>
    <string name="hey_there">Hey There!</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="type_a_message">Type a Message...</string>
    <string name="textview">TextView</string>
    <string name="hello">hello</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prof_pic">Profile Picture</string>

</resources>
